Move vector benchmarks to libs:simdvec